Website minor fixes
- Blog link fixed
- Blog page theme fixed
- Calculations updated

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
+<div class="content">
 <h3>{{ page.title }}</h3>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
 {{ content }}
+</div>
