URL path fixes and removal of redcarpet

--- a/_includes/case-studies-alternating.html
+++ b/_includes/case-studies-alternating.html
@@ -4,7 +4,7 @@
     <div class="row no-gutters align-items-center">
       {% if casestudy.icon %}
       <div class="order-xs-first col-md-3 match-height icon bg-color-{{ page.backgrounds.case_study }} {%  cycle('order-md-first', 'order-md-last') %}">
-        <img src="/img/case-study-icons/{{ casestudy.icon }}" alt="{{ casestudy.title }}"/>
+        <img src="/herald/img/case-study-icons/{{ casestudy.icon }}" alt="{{ casestudy.title }}"/>
       </div>
       {% endif %}
       <div class="order-xs-last col-md-9 {% cycle('order-md-last', 'order-md-first') %}">
