--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,14 +1,14 @@
 <header class="site-header">
     <div class="site-header-content">
         <div class="logo">
-            <a href="/" aria-label="Herald homepage" ><img src="/img/{{ site.logo }}" class="logo" alt="Homepage" /></a>
+            <a href="/herald/" aria-label="Herald homepage" ><img src="{{ site.logo }}" class="logo" alt="Homepage" /></a>
         </div>
         <ul class="nav-menu" id="header-nav">
-            <li class="home"><a href="/" title="{{ site.title }}">Home</a></li>
-            <li class="blog"><a href="/blog" title="Blog Posts">Blog</a></li>
-            <li class="community"><a href="/community" title="Community">Community</a></li>
-            <li class="docs"><a href="/docs">Documentation</a></li>
-            <li class="efficacy"><a href="/efficacy" title="Efficacy Paper">Efficacy Paper</a></li>
+            <li class="home"><a href="/herald/" title="{{ site.title }}">Home</a></li>
+            <li class="blog"><a href="/herald/blog" title="Blog Posts">Blog</a></li>
+            <li class="community"><a href="/herald/community" title="Community">Community</a></li>
+            <li class="docs"><a href="/herald/docs">Documentation</a></li>
+            <li class="efficacy"><a href="/herald/efficacy" title="Efficacy Paper">Efficacy Paper</a></li>
         </ul>
         <div class="nav-mobile-link">
             <a href="javascript:void(0);" id="nav-mobile-toggle"></a>
