--- a/_includes/blog-post-card.html
+++ b/_includes/blog-post-card.html
@@ -5,7 +5,7 @@
                 {% if post.image %}
                 <img src="{{ post.image }}" alt="{{ post.title }}" />
                 {% else %}
-                <img src="{{ '/img/' |site.logo |relative_url}}" alt="{{ post.title }}" />
+                <img src="{{ site.logo }}" alt="{{ post.title }}" />
                 {% endif %}
             </div>
             <article class="post">
