--- a/_scss/site/objects/_post.scss
+++ b/_scss/site/objects/_post.scss
@@ -91,7 +91,7 @@
 
 .post-single-image {
   margin: 0 auto 3rem auto;
-  max-width: 700px;
+  max-width: 75%;
 
   img {
     height: auto;
@@ -105,7 +105,7 @@
 }
 
 .post-single-content {
-  max-width: 700px;
+  max-width: 75%;
   margin: 0 auto 3rem auto;
 
   h2,
