--- a/_scss/site/objects/_header.scss
+++ b/_scss/site/objects/_header.scss
@@ -3,7 +3,7 @@
 
   .site-header-content {
     position: relative;
-    display: flex;
+    //display: flex;
     margin: 0 auto;
     padding: 17px 0 18px 0;
     max-width: $section-content-max-width;
@@ -47,7 +47,7 @@
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     list-style: none;
     margin: 0;
     margin-left: 50px;
