--- a/_includes/head-docs.html
+++ b/_includes/head-docs.html
@@ -1,5 +1,7 @@
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; URL=https://theheraldproject.github.io{{page.url}}">
+  <link rel="canonical" href="https://theheraldproject.github.io{{page.url}}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="/herald/favicon.ico" type="image/x-icon">
