New website home URLs working
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-2">
                 <div class="logo">
-                    <a href="/herald/" aria-label="Herald homepage" ><img src="{{ site.logo }}" class="logo" alt="Homepage" /></a>
+                    <a href="/" aria-label="Herald homepage" ><img src="{{ site.logo }}" class="logo" alt="Homepage" /></a>
                 </div>
             </div>
             <div class="col-md-9 offset-md-1">
