--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -6,8 +6,8 @@
 <div class="row">
   <div class="col">
     <p>{{ site.title }} is released as open source software and provides community support through our GitHub project page.
-        If you encounter an issue or have a question, feel free to reach out on the <strong><a href="https://vmware.github.io/herald/issues" class="light">GitHub issues page for {{ site.title }}</a></strong>.</p>
-    <p>The Herald project team welcomes contributions from the community &mdash; please see our <strong><a href="https://github.com/vmware/herald/blob/master/contributing.md" class="light">contributing documentation</a></strong>.</p>
+        If you encounter an issue or have a question, feel free to reach out on the <strong><a href="https://github.com/theheraldproject/theheraldproject.github.io/issues" class="light">GitHub issues page for {{ site.title }}</a></strong>.</p>
+    <p>The Herald project team welcomes contributions from the community &mdash; please see our <strong><a href="https://github.com/theheraldproject/theheraldproject.github.io/blob/master/contributing.md" class="light">contributing documentation</a></strong>.</p>
   </div>
 </div>
 <div class="row thumbnail-grid mt-5">
