--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
                 </ul>
             </div>
             <div class="col-12 col-md-7 text-center text-md-right">
-              <a href="/herald/" aria-label="Herald homepage" ><img src="{{ site.logo }}" class="logo" alt="Homepage" /></a>
+              <a href="/" aria-label="Herald homepage" ><img src="{{ site.logo }}" class="logo" alt="Homepage" /></a>
             </div>
         </div>
         <div class="row align-items-center">
@@ -49,5 +49,5 @@
     crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
-<script src="/herald/js/jquery.matchHeight.js?{{site.time | date: '%s%N'}}"></script>
-<script src="/herald/js/scripts.js?{{site.time | date: '%s%N'}}"></script>
+<script src="/js/jquery.matchHeight.js?{{site.time | date: '%s%N'}}"></script>
+<script src="/js/scripts.js?{{site.time | date: '%s%N'}}"></script>
