Fixes #84. Added references to LFPH and updated some pages
Various fixes
- Added reference to LFPH and link in footer on all pages
- Added more community description and links to online calendar in LFPH
- Added more up to date wearable information
- Added disease control application prior to DACT backend work
Signed-off-by: Adam Fowler <adam@adamfowler.org>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,7 @@
         </div>
         <div class="row align-items-center">
           <div class="col copyright text-center text-md-right mt-4">
+            The Herald Project is a series of the <a target="_new" href="https://www.lfph.io/join/projects/">Linux Foundation Public Health</a>.
             &copy; {{ site.time | date: '%Y' }} {{ site.author }}.
           </div>
         </div>
