--- a/_scss/site/objects/_card.scss
+++ b/_scss/site/objects/_card.scss
@@ -4,6 +4,10 @@
     text-align: center;
     padding: 2rem 1.25rem;
   }
+  .card-icon {
+    height: 159px;
+    background-color: white;
+  }
 
   &.card-dark {
     color: $card-dark-foreground;
