--- a/_scss/site/settings/_variables.scss
+++ b/_scss/site/settings/_variables.scss
@@ -67,7 +67,7 @@ $section-blue-foreground: $white;
 
 $card-dark-background: #0165AB;
 $card-dark-foreground: $white;
-$card-dark-link: $white;
+$card-dark-link: #1D428A;
 $card-dark-link-hover: $white;
 
 $card-light-background: $white;
