--- a/_includes/blog-posts.html
+++ b/_includes/blog-posts.html
@@ -2,12 +2,12 @@
 {% for post in site.posts %}
     {% include blog-post-card.html %}
         {% if limit > 0 and forloop.index >= limit %}
-         {% break %}
+            {% break %}
         {% endif %}
-        {% assign row = forloop.index | modulo: 6 %}
-{% if row == 0 %}
-</div>
-<div class="row mt-4">
-{% endif %}
+        {% assign row = forloop.index | modulo: 3 %}
+    {% if row == 0 %}
+    </div>
+    <div class="row ">
+    {% endif %}
 {% endfor %}
 </div>
